--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
     
         <div class="service">
             <h2>SERVICES</h2>
-            <a href="html/privacy.html"><i class="fas fa-user-secret"></i> Privacy Policy</a>
-            <a href="html/terms.html"><i class="fas fa-file-contract"></i> Terms and Conditions</a>
-            <a href="html/help.html"><i class="fas fa-question-circle"></i> Help</a>
-            <a href="html/support.html"><i class="fas fa-headset"></i> Support</a>
+            <a href="privacy.html"><i class="fas fa-user-secret"></i> Privacy Policy</a>
+            <a href="terms.html"><i class="fas fa-file-contract"></i> Terms and Conditions</a>
+            <a href="help.html"><i class="fas fa-question-circle"></i> Help</a>
+            <a href="support.html"><i class="fas fa-headset"></i> Support</a>
         </div>
     </main>
 
